--- a/20231028_AI.ipynb
+++ b/20231028_AI.ipynb
@@ -7,7 +7,7 @@
       "collapsed_sections": [
         "620SnGmB0MIi"
       ],
-      "authorship_tag": "ABX9TyO8EGPG/DMOFMzzoEHoUPY6",
+      "authorship_tag": "ABX9TyOvPYE+ppwIy//oBU0tGdN2",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -285,6 +285,63 @@
       ],
       "metadata": {
         "id": "o51Mkiao1tkV"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# step6\n",
+        "\n",
+        "\n",
+        "income=float(input('消費總金額：'))\n",
+        "\n",
+        "\n",
+        "if income >= 100000:\n",
+        "    print(income*0.8, '20% off')\n",
+        "elif income >= 80000:\n",
+        "    print(income*0.9, '15% off')\n",
+        "elif income >= 50000:\n",
+        "    print(income*0.85, '10% off')\n",
+        "elif income >= 30000:\n",
+        "    print(income*0.95, '5% off')\n",
+        "else:\n",
+        "    print('消費不足打折群眾')"
+      ],
+      "metadata": {
+        "id": "eTOvM6wG7owW"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# step 7\n",
+        "\n",
+        "for i in [1,2,3,4,5,6]:\n",
+        "    print(i)\n",
+        "\n",
+        "for i in range(2,10, 2):\n",
+        "    print(i)\n",
+        "\n",
+        "\n",
+        "for i in range(100, 2, -5):\n",
+        "    print(i)\n",
+        "\n",
+        "\n",
+        "myN = int(input('please a number:'))\n",
+        "for i in range(1, myN+1):\n",
+        "    print(i,end=\" \")\n",
+        "\n",
+        "myN = int(input('please a number:'))\n",
+        "for i in range(1, myN+1):\n",
+        "    if i%2 ==0:\n",
+        "        print(i,end=\" \")"
+      ],
+      "metadata": {
+        "id": "zKAhrfPNA_Ei"
       },
       "execution_count": null,
       "outputs": []
