使用 Colaboratory 建立

--- a/20231104_AI.ipynb
+++ b/20231104_AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOSjLHV0Kg90KRm2emx17SV",
+      "authorship_tag": "ABX9TyNrwpZFBrl3KMv2EN8d7KKx",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -378,6 +378,74 @@
       ],
       "metadata": {
         "id": "ryHsRpNCzekn"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#!/usr/bin/env python3\n",
+        "# -*- coding: utf-8 -*-\n",
+        "\"\"\"\n",
+        "Created on Sat Nov  4 14:19:19 2023\n",
+        "\n",
+        "@author: bikego1968\n",
+        "\"\"\"\n",
+        "\n",
+        "數學成績 = {\n",
+        "    'jack': 70,\n",
+        "    'cindy': 60,\n",
+        "    'stanley': 80,\n",
+        "}\n",
+        "\n",
+        "名稱 = input('請輸入名稱')\n",
+        "\n",
+        "if 名稱 in 數學成績:\n",
+        "    print(f\"{名稱} 數學成績 : {數學成績[名稱]}\")\n",
+        "else:\n",
+        "    x = int(input('請輸入成績'))\n",
+        "    數學成績[名稱] = x\n",
+        "    print(數學成績)\n",
+        "\n",
+        "\n",
+        "a = [1, 2, 3]\n",
+        "[i for i in a]\n",
+        "\n",
+        "b = [i+10 for i in a]\n",
+        "c = [[i, i**2, i**3]for i in a]  # 列表推導式語法\n",
+        "d = [i[2] for i in c]\n",
+        "\n",
+        "\n",
+        "[[i, j] for i in [1, 2, 3] for j in [4, 5, 6]]\n",
+        "\n",
+        "[i for i in range(1, 11) if i < 6]\n",
+        "# 1^1, 2^2......100^100\n",
+        "istar = [[i**i] for i in range(1, 100+1)]\n",
+        "# 偶數的次方\n",
+        "istar2 = [[i**i] for i in range(1, 100+1) if i % 2 == 0]\n",
+        "\n",
+        "# 字典推導式使用\n",
+        "成績 = {\n",
+        "    'jack': 70,\n",
+        "    'cindy': 60,\n",
+        "    'stanley': 80,\n",
+        "}\n",
+        "成績加成 = {k: v+100 for k, v in 成績.items()}\n",
+        "\n",
+        "# 自定義函式\n",
+        "\n",
+        "\n",
+        "def myfuction(n):\n",
+        "    n1 = n+100\n",
+        "    return n1\n",
+        "\n",
+        "\n",
+        "myfuction(50)\n",
+        "myfuction(100)+50  # 函式可以直接運算\n"
+      ],
+      "metadata": {
+        "id": "9BTGJ23yHy-_"
       },
       "execution_count": null,
       "outputs": []
