使用 Colaboratory 建立

--- a/20231104_AI.ipynb
+++ b/20231104_AI.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNrwpZFBrl3KMv2EN8d7KKx",
+      "authorship_tag": "ABX9TyOwCw879+nCHoTJlykG+kGu",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -38,7 +38,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -97,7 +97,7 @@
         "id": "qihwV_dT8pGY",
         "outputId": "eec5e70f-f32a-4463-8d2b-020882704d82"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -125,7 +125,7 @@
         "id": "cjwYadT09vSS",
         "outputId": "df037a08-9000-4dda-ce63-becce8c77d13"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -155,7 +155,7 @@
         "id": "ZayH-t1P9y7u",
         "outputId": "23b9d072-3085-4a9e-ccb8-142304936db7"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -197,8 +197,7 @@
         "\n",
         "    else:\n",
         "        print('Bingo!', 'ans is',ans)\n",
-        "        break\n",
-        ""
+        "        break\n"
       ],
       "metadata": {
         "id": "TeH3l7NLA5rZ"
@@ -446,6 +445,56 @@
       ],
       "metadata": {
         "id": "9BTGJ23yHy-_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# 列表推導式\n",
+        "\n",
+        "[i*i for i in [1,3,5,7,9]]"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LF05XGCjDBd8",
+        "outputId": "a302bd80-c0c6-4e8c-d6ad-9d725c1d7a9f"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "[1, 9, 25, 49, 81]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 1
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[f'{i}*{j}={i*j}' for i in range(1,10) for j in range(1,10)]"
+      ],
+      "metadata": {
+        "id": "dmqDbkOGE9j0"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "[[i, j, k] for i in [1,2,3] for j in [2,3,4] for k in [3,5,7]]"
+      ],
+      "metadata": {
+        "id": "OMcqL8beFrx9"
       },
       "execution_count": null,
       "outputs": []
